	PR rtl-optimization/27907 	* expr.c (force_operand): Use convert_move to handle FLOAT_EXTEND and 	FLOAT_TRUNCATE.

* gcc.c-torture/compile/pr27907.c: New test.



git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@115760 138bc75d-0d04-0410-961f-82ee72b054a4